--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
-  <title>GraphQL left-pad</title>
-  <meta name="description" content="Left-pad all the things! (in GraphQL)">
+  <title>Apollo data mocking demo with GraphQL</title>
+  <meta name="description" content="Mocking made easy">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1" />
   <link rel="shortcut icon" type="image/png" href="favicon.png?v1" sizes="16x16 32x32 64x64">
 </head>
